# imd-pune

./: README.md
imd-pune/: README.md  pyproject.toml
imd-pune/src/data/: consolidated_data.py  table_scraper.py
