[tool.poetry]
name = "imd"
version = "0.1.0"
description = "first commit"
authors = ["harman"]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.13.0"
selenium = "^4.10.0"
webdriver-manager = "^3.8.6"
bs4 = "^0.0.1"
wheel = "^0.40.0"
pandas = "^2.0.2"
lxml = "^4.9.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
